--- a/spec/web/index.html
+++ b/spec/web/index.html
@@ -22,5 +22,7 @@ Limitations under the License.
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.0.0/jasmine.min.js" integrity="sha256-VTwtJgwp6a1uFqNssZgRMolaGrDsNFyITehceOp4fBI=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.0.0/jasmine-html.min.js" integrity="sha256-+KbBtXGJS1yjuf0jBpU1W8rV3qKzVqF7TTS3hO/zZ0I=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.0.0/boot.min.js" integrity="sha256-qfZXhUHoKdHO7Y0EP8R5I/gIhGQGYtqY8OsdY0MTydA=" crossorigin="anonymous"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script type="application/javascript" src="./symbol-observable.js"></script>
   <script src="./index.spec.js" type="text/javascript"></script>
 </body>
